Fix: separates element overlay in cardTheme.module.css - #8
The media query rule that maintained: ' .cardThemeImg {
    height: 11.6em;
    }' as it caused the text in the 'figcaption' tag of the related images to overlap over the link text of the card

--- a/store/src/features/home/stylesHome/cardTheme.module.css
+++ b/store/src/features/home/stylesHome/cardTheme.module.css
@@ -81,9 +81,3 @@
   -o-border-radius: var(--border-radius-principal);
   object-fit: cover;
 }
-
-@media screen and (max-width: 480px) {
-  .cardThemeImg {
-    height: 11.6em;
-  }
-}
